--- a/dos33.html
+++ b/dos33.html
@@ -2639,7 +2639,7 @@ With that "legalese" out of the way ... enjoy the read!
                     240             STA RSTATE      ; INDICATE APSFT RUN
 <hr>                    241 ERUN0       JSR ELOAD       ; LOAD PGM                      ; === <a class='page' name='page144'>144</a> ===
                     242 ERUN1       JSR PRCRIF      ;REENTRY POINT FOR ASFT RELOC
-                    243             JSR MVCSW       ; GO RESTORE CHAR I/O SW        ; <span class='todo'>TODO</span> What keeps futzing with CIN / COUT ??
+                    243             JSR MVCSW       ; GO RESTORE CHAR I/O SW        ; What keeps futzing with CIN / COUT ? <b>Guilty Party &rarr;</b> <a class='x' href='#SVREGS'>SVREGS</a>
                     244             JMP (RUN)
                     245 ;
                     246 ; IBRUN - INT BASIC RUN
