Fix bad T2S4 link

--- a/dos33.html
+++ b/dos33.html
@@ -5377,7 +5377,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 34F4:FC FC FF FC
 34F8:FD FD FF FD
 34FC:FE FC FD FD
-3500:FC FE FF FC                                                                    ; === <a class='ts' href='#T2D4'>T2S4</a> ===
+3500:FC FE FF FC                                                                    ; === <a class='ts' href='#T2S4'>T2S4</a> ===
 3504:FC FF FC FF
 3508:FE FD FE FC                                                                    ; /sarcasm Who cares, we have 140KB, right!
 350C:FC FD FC FD
