Fix TrackSec link

--- a/dos33.html
+++ b/dos33.html
@@ -5321,7 +5321,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3453:FF FF FF FF                                                                    ; [98]=T18 (Boot sector would display non-bootable message)
 3457:FF FF FF FF                                                                    ; [9C]=T19 See File <a class="file" href="#FLOCSEC">FLOCSEC</a>, Func <a class="x" href="#GETSEC">GETSEC</a>, Line #<a class='line' href='#FLOCSEC.83'>83</a>; Trk Free <a class='x' href='#FRESEC'>FRESEC</a>, Line #<a class='line' href='#FLOCSEC.183'>183</a>; Trk Allocation <span class="todo">todo</span>
 345B:FF FF FF FF                                                                    ; [A0]=T1A The <b>smart</b> thing to have done would be to
-345F:FF FF FF FF                                                                    ; [A4]=T1B put the VTOC and CATALOG on <a class='ts'>T0SF</a> - <a class='ts'>T0S1</a>
+345F:FF FF FF FF                                                                    ; [A4]=T1B put the VTOC and CATALOG on <a class='ts'>T0SF</a> or <a class='ts' href='#T0S1'>T0S1</a>
 3463:FF FF FF FF                                                                    ; [A8]=T1C That way <b>both</b> a bootable and data disk would
 3467:FF FF FF FF                                                                    ; [AC]=T1D get an extra 16 sectors of free disk space.
 346B:FF FF FF FF                                                                    ; [B0]=T1E 
